PyMaker/datas/object2/RawHTML/i4701/Python_DOC_referPages.how-to-get-occured-words-with-occurance-input.txt
<div class="post-text" itemprop="text">
<p>newcomer python learner here.</p>
<p>I want to write a code that i decide to give a number as occurances of a specific word and get that words from a txt file as prints. Forexample there is some words occurs 5 times in a txt file. I give "5" as input and get that words which occured 5 times in txt file as output with alphabetical order. I've tried below codes and didn't get any result and coulnt get any good results with sort for alphabetical order. I hope i could explained well. Thanks in advance.</p>
<pre><code>words = "test.txt"

for i in set(words):

 if words.count(i) == 5:

  print(i)
</code></pre>
<p>edited code;</p>
<pre><code>with open("test.txt") as f:

for f in set(words):

if words.count(f) == 2:

 print(f)
</code></pre>
<p>and it gives me error;</p>
<blockquote>
<p>File "", line 5
      if words.count(f) == 2:
       ^ IndentationError: expected an indented block</p>
</blockquote>
</div>
<div class="post-text" itemprop="text">
<p>The error message "expected an indented block" means that it expects the code to look like this:</p>
<pre><code>with open("test.txt") as f:

 for f in set(words):

  if words.count(f) == 2:

   print(f)
</code></pre>
<p>Note that each sub-block after a colon is written one more space to the right. Better practice is to use larger indentation, such as four spaces.</p>
</div>
<span class="comment-copy"><code>words</code> is just a string with the value <code>test.txt</code>. You need to read from that file; look at <a href="https://docs.python.org/3.6/tutorial/inputoutput.html#reading-and-writing-files" rel="nofollow noreferrer"><code>open()</code></a></span>
<span class="comment-copy">also look at the difference between <code>if</code> ( a condition ) and <code>for</code> (or <code>while</code> - a loop - needed to print multiple things) as well as basic data structures like <code>list</code>s - you should probably tackle some basic tutorials first: <a href="https://docs.python.org/3/tutorial/" rel="nofollow noreferrer">docs.python.org/3/tutorial</a>  to get the sorting and file reading part right-..</span>
<span class="comment-copy">In short: Happy Coding. SO  is about fixing <i>your</i> Code - not implementing your ideas.  Please go over <a href="https://stackoverflow.com/help/how-to-ask">how to ask</a> and  <a href="https://stackoverflow.com/help/on-topic">on-topic</a> again and if you have specific questions provide  your code as <a href="https://stackoverflow.com/help/mcve">mvce</a>. If you encounter errors, copy and paste the error message verbatim ( word for word) into your question. Avoid using screenshots unless you  need to convey layout errors. We can NOT copy and paste your image into our IDEs to fix your code.</span>
<span class="comment-copy">I ve edited codes and still getting errors. And also i am trying to sort this outputs as alphabetical order. Sory for this easy questions but learning programming after 30 s is really hard :)</span>
